--- a/abstract-machine/Makefile
+++ b/abstract-machine/Makefile
@@ -84,8 +84,9 @@ CFLAGS   += -O2 -MMD -Wall -Werror $(INCFLAGS) \
             -D__PLATFORM__=$(PLATFORM) -D__PLATFORM_$(shell echo $(PLATFORM) | tr a-z A-Z | tr - _) \
             -DARCH_H=\"arch/$(ARCH).h\" \
             -fno-asynchronous-unwind-tables -fno-builtin -fno-stack-protector \
-            -Wno-main -U_FORTIFY_SOURCE
-            -Wno-error=array-bounds
+			-Wno-main -U_FORTIFY_SOURCE \
+			-Wno-error=array-bounds -g 
+	        
 
 CXXFLAGS +=  $(CFLAGS) -ffreestanding -fno-rtti -fno-exceptions
 ASFLAGS  += -MMD $(INCFLAGS)
@@ -160,3 +161,6 @@ clean-all: $(CLEAN_ALL) clean
 $(CLEAN_ALL):
 	-@$(MAKE) -s -C $@ clean
 .PHONY: clean-all $(CLEAN_ALL)
+
+clean-am:
+	rm -rf ../abstract-machine/am/build/ ../abstract-machine/klib/build 
